--- a/OpticalFiber.csproj
+++ b/OpticalFiber.csproj
@@ -65,7 +65,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Authorize">
-      <HintPath>..\Authorize\obj\Debug\netstandard2.0\Authorize.dll</HintPath>
+      <HintPath>..\Authorize\bin\Release\netstandard2.0\Authorize.dll</HintPath>
     </Reference>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.5.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <HintPath>packages\BouncyCastle.1.8.5\lib\BouncyCastle.Crypto.dll</HintPath>
